Fix: improve company info text contrast

--- a/igrs-netlify/css/style.css
+++ b/igrs-netlify/css/style.css
@@ -1112,14 +1112,6 @@ footer .footer-section a:hover {
     font-weight: 400;
 }
 
-.company-info p,
-.company-info li,
-.company-info span,
-.company-info div {
-    color: #111827;
-    font-weight: 400;
-}
-
 .company-info a {
     color: #111827;
     text-decoration: underline;
@@ -1145,6 +1137,11 @@ footer .company-info {
     font-size: 0.875rem;
     line-height: 1.6;
     margin: 0.5rem 0 0 0;
+}
+
+footer .company-info a {
+    color: #a0aec0;
+    text-decoration: none;
 }
 
 footer .company-info strong {
